fix: footer spacing

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -17,7 +17,7 @@ ul {
   list-style: none;
 }
 li {
-  padding: 1rem 6rem;
+  padding: 1rem 1rem;
 }
 
 a {
